--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "build": "rm -rf dist/*  &&  NODE_ENV=production rollup  -c",
         "build:win": "rm -rf dist/*  && cross-env NODE_ENV=production rollup  -c",
         "reload": "livereload 'src/'",
-        "lint": "eslint 'src/**/*.{ts}' --fix -o eslint_log.log",
+        "eslint": "eslint src --ext .tsx,.ts --color --fix",
         "test": "parcel test/index.html --out-dir test/dist",
         "watch": "npm-run-all --parallel reload dev test",
         "gc": "git-cz"
@@ -68,7 +68,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "sh ./blockfieldlint.sh  && lint-staged",
+            "pre-commit": "npm run eslint && lint-staged",
             "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
         }
     },
