--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "good-mock",
     "version": "0.0.1",
-    "description": "好用的mock数据模板",
+    "description": "好用的 Mock 数据模板",
     "main": "dist/index.js",
     "module": "dist/index-esm-min.js",
     "types": "dist/index.d.ts",
@@ -27,38 +27,42 @@
         "reload": "livereload 'src/'",
         "eslint": "eslint src --ext .tsx,.ts --color --fix",
         "test": "parcel test/index.html --out-dir test/dist",
-        "watch": "npm-run-all --parallel reload dev test",
+        "server": "node dist/index.js",
+        "watch": "npm-run-all --parallel reload dev server",
         "gc": "git-cz"
     },
     "dependencies": {
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "get-port": "^5.1.1",
+        "glob": "^7.1.6"
     },
     "devDependencies": {
         "@babel/core": "^7.10.4",
-        "@babel/plugin-transform-runtime": "^7.10.3",
+        "@babel/plugin-transform-runtime": "^7.10.4",
         "@babel/preset-env": "^7.10.4",
-        "@commitlint/config-conventional": "^9.0.1",
-        "@rollup/plugin-alias": "^3.1.1",
-        "@rollup/plugin-commonjs": "^13.0.0",
+        "@commitlint/config-conventional": "^9.1.1",
+        "@rollup/plugin-commonjs": "^13.0.1",
         "@rollup/plugin-json": "^4.1.0",
-        "@rollup/plugin-node-resolve": "^8.1.0",
-        "@types/node": "^14.0.14",
+        "@rollup/plugin-node-resolve": "^8.4.0",
+        "@types/express": "^4.17.7",
+        "@types/http-errors": "^1.8.0",
+        "@types/node": "^14.0.22",
         "commitizen": "^4.1.2",
         "core-js": "^3.6.5",
         "cross-env": "^7.0.2",
-        "eslint": "^7.3.1",
+        "eslint": "^7.4.0",
         "livereload": "^0.9.1",
         "npm-run-all": "^4.1.5",
         "parcel": "^1.12.4",
         "prettier": "^2.0.5",
-        "rollup": "^2.18.1",
+        "rollup": "^2.21.0",
         "rollup-plugin-babel": "^4.4.0",
         "rollup-plugin-eslint": "^7.0.0",
+        "rollup-plugin-node-polyfills": "^0.2.1",
         "rollup-plugin-sourcemaps": "^0.6.2",
         "rollup-plugin-terser": "^6.1.0",
         "rollup-plugin-typescript2": "^0.27.1",
         "rollup-watch": "^4.3.1",
-        "tslib": "^2.0.0",
         "typescript": "^3.9.6"
     },
     "config": {
