--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "dependencies": {
         "express": "^4.17.1",
         "get-port": "^5.1.1",
-        "glob": "^7.1.6"
+        "glob": "^7.1.6",
+        "path-to-regexp": "^6.1.0"
     },
     "devDependencies": {
         "@babel/core": "^7.10.4",
@@ -47,6 +48,7 @@
         "@types/express": "^4.17.7",
         "@types/http-errors": "^1.8.0",
         "@types/node": "^14.0.22",
+        "@types/path-to-regexp": "^1.7.0",
         "commitizen": "^4.1.2",
         "core-js": "^3.6.5",
         "cross-env": "^7.0.2",
