--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
-registry=https://registry.npm.taobao.org/
+# registry=https://registry.npm.taobao.org/
 # registry=https://registry.yarnpkg.com/
-# registry=https://registry.npmjs.org/
+registry=https://registry.npmjs.org/
