--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
         "@types/http-errors": "^1.8.0",
         "@types/node": "^14.0.23",
         "@types/path-to-regexp": "^1.7.0",
+        "@typescript-eslint/eslint-plugin": "^3.6.1",
+        "@typescript-eslint/parser": "^3.6.1",
         "commitizen": "^4.1.2",
         "core-js": "^3.6.5",
         "cross-env": "^7.0.2",
