--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "core-js": "^3.6.5",
         "cross-env": "^7.0.2",
         "eslint": "^7.4.0",
+        "husky": "^4.2.5",
         "livereload": "^0.9.1",
         "npm-run-all": "^4.1.5",
         "parcel": "^1.12.4",
@@ -77,7 +78,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "npm run eslint && lint-staged",
+            "pre-commit": "npm run eslint && npx lint-staged",
             "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
         }
     },
