--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "build": "rm -rf dist/*  &&  NODE_ENV=production rollup  -c",
         "build:win": "rm -rf dist/*  && cross-env NODE_ENV=production rollup  -c",
         "reload": "livereload 'src/'",
-        "eslint": "eslint src --ext .tsx,.ts --color --fix",
+        "eslint": "eslint ./src --ext .tsx,.ts --color --fix",
         "test": "parcel test/index.html --out-dir test/dist",
         "server": "node dist/index.js",
         "watch": "npm-run-all --parallel reload dev server",
@@ -57,6 +57,7 @@
         "cross-env": "^7.0.2",
         "eslint": "^7.4.0",
         "husky": "^4.2.5",
+        "lint-staged": "^10.2.11",
         "livereload": "^0.9.1",
         "npm-run-all": "^4.1.5",
         "parcel": "^1.12.4",
@@ -78,13 +79,14 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "npm run eslint && npx lint-staged",
+            "pre-commit": "lint-staged",
             "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
         }
     },
     "lint-staged": {
         "*.{js,ts,tsx,jsx,css,less,md}": [
             "prettier --write",
+            "eslint",
             "git add"
         ]
     }
