--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
         }
     },
     "lint-staged": {
-        "*.{js,ts,tsx,jsx,css,less,md}": [
+        "src/**/*.ts": [
             "prettier --write",
             "eslint",
             "git add"
