--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
     "name": "good-mock",
-    "version": "0.0.4",
+    "version": "0.0.5",
     "description": "好用的 Mock 数据模板",
     "main": "dist/index.js",
     "module": "dist/index-esm-min.js",
     "types": "dist/index.d.ts",
     "files": [
-        "dist"
+        "dist",
+        "lib"
     ],
+    "bin": {
+        "good-mock": "./lib/index.js"
+    },
     "license": "ISC",
     "author": "chenjiajing",
     "private": false,
@@ -22,55 +26,56 @@
     ],
     "scripts": {
         "dev": "rollup -c --watch",
-        "build": "rm -rf dist/*  &&  NODE_ENV=production rollup  -c",
+        "build": "rm -rf dist/*  && cp -R lib dist &&  NODE_ENV=production rollup  -c",
         "build:win": "rm -rf dist/*  && cross-env NODE_ENV=production rollup  -c",
-        "reload": "livereload 'src/'",
+        "reload": "livereload mock/",
         "eslint": "eslint ./src --ext .tsx,.ts --color --fix",
         "test": "parcel test/index.html --out-dir test/dist",
-        "server": "node dist/index.js",
-        "watch": "npm-run-all --parallel reload dev server",
+        "server": "node lib/index.js",
+        "watch": "npm-run-all --parallel reload server",
         "gc": "git-cz"
     },
     "dependencies": {
+        "chokidar": "^3.4.2",
         "express": "^4.17.1",
         "get-port": "^5.1.1",
         "glob": "^7.1.6",
         "path-to-regexp": "^6.1.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.11.0",
-        "@babel/plugin-transform-runtime": "^7.11.0",
-        "@babel/preset-env": "^7.10.4",
-        "@commitlint/cli": "^9.1.1",
-        "@commitlint/config-conventional": "^9.1.1",
-        "@rollup/plugin-commonjs": "^14.0.0",
+        "@babel/core": "^7.11.6",
+        "@babel/plugin-transform-runtime": "^7.11.5",
+        "@babel/preset-env": "^7.11.5",
+        "@commitlint/cli": "^9.1.2",
+        "@commitlint/config-conventional": "^9.1.2",
+        "@rollup/plugin-commonjs": "^15.0.0",
         "@rollup/plugin-json": "^4.1.0",
-        "@rollup/plugin-node-resolve": "^8.4.0",
-        "@types/express": "^4.17.7",
-        "@types/node": "^14.0.27",
+        "@rollup/plugin-node-resolve": "^9.0.0",
+        "@types/express": "^4.17.8",
+        "@types/node": "^14.6.4",
         "@types/path-to-regexp": "^1.7.0",
-        "@typescript-eslint/eslint-plugin": "^3.7.1",
-        "@typescript-eslint/parser": "^3.7.1",
-        "commitizen": "^4.1.2",
+        "@typescript-eslint/eslint-plugin": "^4.1.0",
+        "@typescript-eslint/parser": "^4.1.0",
+        "commitizen": "^4.2.1",
         "core-js": "^3.6.5",
         "cross-env": "^7.0.2",
-        "eslint": "^7.6.0",
+        "eslint": "^7.8.1",
         "good-mock": "^0.0.4",
-        "husky": "^4.2.5",
-        "lint-staged": "^10.2.11",
+        "husky": "^4.3.0",
+        "lint-staged": "^10.3.0",
         "livereload": "^0.9.1",
         "npm-run-all": "^4.1.5",
         "parcel": "^1.12.4",
-        "prettier": "^2.0.5",
-        "rollup": "^2.23.0",
+        "prettier": "^2.1.1",
+        "rollup": "^2.26.11",
         "rollup-plugin-babel": "^4.4.0",
         "rollup-plugin-eslint": "^7.0.0",
         "rollup-plugin-node-polyfills": "^0.2.1",
         "rollup-plugin-sourcemaps": "^0.6.2",
-        "rollup-plugin-terser": "^6.1.0",
-        "rollup-plugin-typescript2": "^0.27.1",
+        "rollup-plugin-terser": "^7.0.2",
+        "rollup-plugin-typescript2": "^0.27.2",
         "rollup-watch": "^4.3.1",
-        "typescript": "^3.9.7"
+        "typescript": "^4.0.2"
     },
     "config": {
         "commitizen": {
