--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "good-mock",
-    "version": "0.0.6",
+    "version": "1.0.0",
     "description": "好用的 Mock 数据模板",
     "main": "dist/index.js",
     "module": "dist/index-esm-min.js",
@@ -28,19 +28,16 @@
         "dev": "rollup -c --watch",
         "build": "rm -rf dist/*  && cp -R lib dist &&  NODE_ENV=production rollup  -c",
         "build:win": "rm -rf dist/*  && cross-env NODE_ENV=production rollup  -c",
-        "reload": "livereload mock/",
         "eslint": "eslint ./src --ext .tsx,.ts --color --fix",
         "test": "parcel test/index.html --out-dir test/dist",
-        "server": "node lib/index.js",
-        "watch": "npm-run-all --parallel reload server",
-        "gc": "git-cz",
-        "mock": "node ./node_modules/.bin/good-mock"
+        "mock": "nodemon --watch mock ./lib/index.js",
+        "gc": "git-cz"
     },
     "dependencies": {
-        "chokidar": "^3.4.2",
         "express": "^4.17.1",
         "get-port": "^5.1.1",
         "glob": "^7.1.6",
+        "nodemon": "^2.0.4",
         "path-to-regexp": "^6.1.0"
     },
     "devDependencies": {
@@ -61,11 +58,9 @@
         "core-js": "^3.6.5",
         "cross-env": "^7.0.2",
         "eslint": "^7.8.1",
-        "good-mock": "^0.0.5",
         "husky": "^4.3.0",
         "lint-staged": "^10.3.0",
         "livereload": "^0.9.1",
-        "npm-run-all": "^4.1.5",
         "parcel": "^1.12.4",
         "prettier": "^2.1.1",
         "rollup": "^2.26.11",
