--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "build:win": "rm -rf dist/*  && cross-env NODE_ENV=production rollup  -c",
         "eslint": "eslint ./src --ext .tsx,.ts --color --fix",
         "test": "parcel test/index.html --out-dir test/dist",
-        "mock": "nodemon --watch mock ./lib/index.js",
+        "mock": "nodemon --watch mock ./dist/lib/index.js",
         "gc": "git-cz"
     },
     "dependencies": {
