--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "good-mock",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "好用的 Mock 数据模板",
     "main": "dist/index.js",
     "module": "dist/index-esm-min.js",
@@ -58,6 +58,7 @@
         "core-js": "^3.6.5",
         "cross-env": "^7.0.2",
         "eslint": "^7.8.1",
+        "good-mock": "^1.0.0",
         "husky": "^4.3.0",
         "lint-staged": "^10.3.0",
         "livereload": "^0.9.1",
