--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "dev": "rollup -c --watch",
         "build": "rm -rf dist/*  && cp -R lib dist &&  NODE_ENV=production rollup  -c",
         "build:win": "rm -rf dist/*  && cross-env NODE_ENV=production rollup  -c",
-        "eslint": "eslint ./src --ext .tsx,.ts --color --fix",
+        "fix": "eslint src --ext .tsx,.ts --color --fix",
         "test": "parcel test/index.html --out-dir test/dist",
         "mock": "nodemon --watch mock ./dist/lib/index.js",
         "gc": "git-cz"
@@ -46,31 +46,33 @@
         "@babel/preset-env": "^7.11.5",
         "@commitlint/cli": "^11.0.0",
         "@commitlint/config-conventional": "^11.0.0",
-        "@rollup/plugin-commonjs": "^15.0.0",
+        "@rollup/plugin-commonjs": "^15.1.0",
         "@rollup/plugin-json": "^4.1.0",
         "@rollup/plugin-node-resolve": "^9.0.0",
         "@types/express": "^4.17.8",
-        "@types/node": "^14.11.1",
+        "@types/glob": "^7.1.3",
+        "@types/node": "^14.11.2",
         "@types/path-to-regexp": "^1.7.0",
-        "@typescript-eslint/eslint-plugin": "^4.1.0",
-        "@typescript-eslint/parser": "^4.1.0",
+        "@typescript-eslint/eslint-plugin": "^4.2.0",
+        "@typescript-eslint/parser": "^4.2.0",
         "commitizen": "^4.2.1",
         "core-js": "^3.6.5",
         "cross-env": "^7.0.2",
         "eslint": "^7.9.0",
+        "eslint-config-prettier": "^6.12.0",
         "good-mock": "^1.0.3",
         "husky": "^4.3.0",
         "lint-staged": "^10.4.0",
         "livereload": "^0.9.1",
         "parcel": "^1.12.4",
         "prettier": "^2.1.2",
-        "rollup": "^2.27.1",
+        "rollup": "^2.28.2",
         "rollup-plugin-babel": "^4.4.0",
         "rollup-plugin-eslint": "^7.0.0",
         "rollup-plugin-node-polyfills": "^0.2.1",
         "rollup-plugin-sourcemaps": "^0.6.2",
         "rollup-plugin-terser": "^7.0.2",
-        "rollup-plugin-typescript2": "^0.27.2",
+        "rollup-plugin-typescript2": "^0.27.3",
         "rollup-watch": "^4.3.1",
         "typescript": "^4.0.3"
     },
@@ -88,7 +90,7 @@
     "lint-staged": {
         "src/**/*.ts": [
             "prettier --write",
-            "eslint",
+            "fix",
             "git add"
         ]
     }
