--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "printWidth": 160,
   "tabWidth": 2,
   "useTabs": true,
-  "singleQuote": true,
+  "singleQuote": false,
   "semi": true,
   "trailingComma": "none",
   "bracketSpacing": true
