--- a/package.json
+++ b/package.json
@@ -43,46 +43,46 @@
         "express": "^4.17.1",
         "get-port": "^5.1.1",
         "glob": "^7.1.6",
-        "nodemon": "^2.0.6",
+        "nodemon": "^2.0.7",
         "chalk": "^4.1.0",
         "path-to-regexp": "^6.2.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.12.10",
-        "@babel/plugin-transform-runtime": "^7.12.10",
-        "@babel/preset-env": "^7.12.11",
-        "@commitlint/cli": "^11.0.0",
-        "@commitlint/config-conventional": "^11.0.0",
-        "@rollup/plugin-commonjs": "^17.0.0",
+        "@babel/core": "^7.13.1",
+        "@babel/plugin-transform-runtime": "^7.13.7",
+        "@babel/preset-env": "^7.13.5",
+        "@commitlint/cli": "^12.0.0",
+        "@commitlint/config-conventional": "^12.0.0",
+        "@rollup/plugin-commonjs": "^17.1.0",
         "@rollup/plugin-json": "^4.1.0",
-        "@rollup/plugin-node-resolve": "^11.0.1",
-        "@types/express": "^4.17.9",
+        "@rollup/plugin-node-resolve": "^11.2.0",
+        "@types/express": "^4.17.11",
         "@types/glob": "^7.1.3",
-        "@types/node": "^14.14.16",
+        "@types/node": "^14.14.31",
         "@types/path-to-regexp": "^1.7.0",
-        "@typescript-eslint/eslint-plugin": "^4.11.1",
-        "@typescript-eslint/parser": "^4.11.1",
-        "commitizen": "^4.2.2",
-        "core-js": "^3.8.1",
+        "@typescript-eslint/eslint-plugin": "^4.15.2",
+        "@typescript-eslint/parser": "^4.15.2",
+        "commitizen": "^4.2.3",
+        "core-js": "^3.9.0",
         "cross-env": "^7.0.3",
-        "eslint": "^7.16.0",
-        "eslint-config-prettier": "^7.1.0",
-        "good-mock": "^1.2.4",
-        "husky": "^4.3.6",
-        "lint-staged": "^10.5.3",
+        "eslint": "^7.20.0",
+        "eslint-config-prettier": "^8.1.0",
+        "good-mock": "^1.2.6",
+        "husky": "^4.3.8",
+        "lint-staged": "^10.5.4",
         "livereload": "^0.9.1",
         "parcel": "^1.12.4",
         "prettier": "^2.2.1",
-        "rollup": "^2.35.1",
+        "rollup": "^2.39.1",
         "rollup-plugin-babel": "^4.4.0",
         "rollup-plugin-eslint": "^7.0.0",
         "rollup-plugin-node-polyfills": "^0.2.1",
         "rollup-plugin-sourcemaps": "^0.6.3",
         "rollup-plugin-terser": "^7.0.2",
-        "rollup-plugin-typescript2": "^0.29.0",
+        "rollup-plugin-typescript2": "^0.30.0",
         "rollup-watch": "^4.3.1",
-        "standard-version": "^9.0.0",
-        "typescript": "^4.1.3"
+        "standard-version": "^9.1.1",
+        "typescript": "^4.2.2"
     },
     "config": {
         "commitizen": {
@@ -91,14 +91,14 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "npm run fix && lint-staged",
+            "pre-commit": "lint-staged",
             "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
         }
     },
     "lint-staged": {
         "src/**/*.ts": [
-            "prettier --write",
-            "git add"
+            "eslint src --ext .tsx,.ts --color --fix",
+            "prettier --write"
         ]
     }
 }
