--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "build:win": "rm -rf dist/*  && cross-env NODE_ENV=production rollup  -c",
         "fix": "eslint src --ext .tsx,.ts --color --fix",
         "test": "parcel test/index.html --out-dir test/dist --port 3000",
-        "mock": "npm run build && npm link good-mock && nodemon --watch mock ./dist/lib/index.js",
+        "mock": "npm run build && npm link good-mock && nodemon -e ts,js  --watch mock --exec ts-node ./dist/lib/index.js",
         "gc": "git-cz",
         "patch": "standard-version -r patch",
         "minor": "standard-version -r minor",
@@ -40,40 +40,41 @@
         "pub": "npm run build && npx git push --follow-tags origin master && npx npm publish --access=public"
     },
     "dependencies": {
+        "chalk": "^4.1.1",
         "express": "^4.17.1",
         "get-port": "^5.1.1",
-        "glob": "^7.1.6",
-        "nodemon": "^2.0.7",
-        "chalk": "^4.1.0",
-        "path-to-regexp": "^6.2.0"
+        "glob": "^7.1.7",
+        "nodemon": "^2.0.12",
+        "path-to-regexp": "^6.2.0",
+        "ts-node": "^10.1.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.13.8",
-        "@babel/plugin-transform-runtime": "^7.13.8",
-        "@babel/preset-env": "^7.13.8",
-        "@commitlint/cli": "^12.0.1",
-        "@commitlint/config-conventional": "^12.0.1",
-        "@rollup/plugin-commonjs": "^17.1.0",
+        "@babel/core": "^7.14.6",
+        "@babel/plugin-transform-runtime": "^7.14.5",
+        "@babel/preset-env": "^7.14.7",
+        "@commitlint/cli": "^12.1.4",
+        "@commitlint/config-conventional": "^12.1.4",
+        "@rollup/plugin-commonjs": "^19.0.0",
         "@rollup/plugin-json": "^4.1.0",
-        "@rollup/plugin-node-resolve": "^11.2.0",
-        "@types/express": "^4.17.11",
-        "@types/glob": "^7.1.3",
-        "@types/node": "^14.14.31",
+        "@rollup/plugin-node-resolve": "^13.0.0",
+        "@types/express": "^4.17.13",
+        "@types/glob": "^7.1.4",
+        "@types/node": "^16.3.1",
         "@types/path-to-regexp": "^1.7.0",
-        "@typescript-eslint/eslint-plugin": "^4.15.2",
-        "@typescript-eslint/parser": "^4.15.2",
-        "commitizen": "^4.2.3",
-        "core-js": "^3.9.0",
+        "@typescript-eslint/eslint-plugin": "^4.28.3",
+        "@typescript-eslint/parser": "^4.28.3",
+        "commitizen": "^4.2.4",
+        "core-js": "^3.15.2",
         "cross-env": "^7.0.3",
-        "eslint": "^7.20.0",
-        "eslint-config-prettier": "^8.1.0",
+        "eslint": "^7.30.0",
+        "eslint-config-prettier": "^8.3.0",
         "good-mock": "^1.2.10",
         "husky": "^4.3.8",
-        "lint-staged": "^10.5.4",
-        "livereload": "^0.9.1",
-        "parcel": "^1.12.4",
-        "prettier": "^2.2.1",
-        "rollup": "^2.40.0",
+        "lint-staged": "^11.0.1",
+        "livereload": "^0.9.3",
+        "parcel": "2.0.0-beta.2",
+        "prettier": "^2.3.2",
+        "rollup": "^2.53.1",
         "rollup-plugin-babel": "^4.4.0",
         "rollup-plugin-eslint": "^7.0.0",
         "rollup-plugin-node-polyfills": "^0.2.1",
@@ -81,8 +82,8 @@
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-typescript2": "^0.30.0",
         "rollup-watch": "^4.3.1",
-        "standard-version": "^9.1.1",
-        "typescript": "^4.2.2"
+        "standard-version": "^9.3.0",
+        "typescript": "^4.3.5"
     },
     "config": {
         "commitizen": {
